Mon Dec 22 20:06:09 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/datastructures.py: Add ProcessedDocument.get_distance() to
	  get the distance from a document to a point, or to another
	  document.
	* xappy/searchconnection.py: Add SearchConnection.calc_distance()
	  to get the distance between two points.  This is a static method,
	  because there's nothing particular to a SearchConnection used in
	  it, but it seems like the most natural place for it to go at
	  present.

Mon Dec 22 19:27:12 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/field_associations.py: Add test that
	  grouped_data[0] is the same as data, when there are no groups.

Mon Dec 22 19:06:31 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/datastructures.py,xappy/searchconnection.py,
	  xappy/unittests/field_groups.py: Move grouped_data into
	  ProcessedDocument, and change it into a property, to match data.

Mon Dec 22 18:50:51 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add doccomment for query_distance().

Mon Dec 22 17:43:35 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fieldactions.py,xappy/searchconnection.py,
	  xappy/unittests/field_groups.py: Add SearchResult.grouped_data()
	  method, to return data grouped by FieldGroup.

Mon Dec 22 15:20:13 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Use new xapian packages, which include
	  geospatial stuff.
	* docs/introduction.rst,xappy/doctests/searchconnection_doctest2.txt:
	  Fix various tests to cover fixes in the similarity search
	  algorithms in xapian core - various terms which didn't really
	  contribute to the similarity are no longer produced by it.
	* xappy/searchconnection.py: Change sort-by-distance to sort in
	  increasing distance order, rather than decreasing, and keep
	  references to the bits used by the DistancePostingSource.